// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`undefinedCounter 1`] = `
<div
  className="memory-game--counter"
/>
`;

exports[`undefinedCounter 2`] = `
<div
  className="memory-game--counter"
>
  42
</div>
`;
